--- a/myproject/templates/app/queue.html
+++ b/myproject/templates/app/queue.html
@@ -1,4 +1,4 @@
-	<table class="table table-md">
+	<table class="table table-md" id="test">
 		<thead>
 			<tr class="text-center">
 				<th scope="col">Queue</th>
