--- a/myproject/templates/app/review.html
+++ b/myproject/templates/app/review.html
@@ -1,3 +1,4 @@
+{% if user.role == "member" %}
 <div class="row justify-content-center mt-4">
     <div class="col-xl-8">
         <div class="card p-3" style="">
@@ -20,3 +21,4 @@
         </div>
     </div>
 </div>
+{% endif %}
