--- a/myproject/templates/app/card3Col.html
+++ b/myproject/templates/app/card3Col.html
@@ -5,8 +5,7 @@
     <div class="card p-3 mb-2 ">
         <div class="d-flex justify-content-between">
             <a href="{% url 'resCard' restaurant.resID %}">
-                <img src="{{restaurant.getProfilePic}}" class="card-img resImg mx-auto d-block "
-                    style="height: 200px;">
+                <img src="{{restaurant.getProfilePic}}" class="card-img resImg mx-auto d-block " style="height: 200px;">
             </a>
         </div>
         <div class="mt-2">
@@ -15,7 +14,7 @@
                 <p class="card-text mt-auto">{{restaurant.categoryID.categoryName}}</p>
                 <p class="card-text ">
                     <i class="fas fa-star text-warning"></i>
-                    <span> 4.2</span>
+                    <span> {{rating.rating__avg}}</span>
                     <i class="far fa-clock text-secondary"></i>
                     <span> 15 min</span>
                     <i class="fas fa-map-marker-alt text-secondary"></i>
