--- a/myproject/templates/app/resCard.html
+++ b/myproject/templates/app/resCard.html
@@ -13,7 +13,7 @@
             <p class="card-text">{{restaurant.categoryID.categoryName}}</p>
             <p class="card-text">
               <i class="fas fa-star text-warning"></i>
-              <span> 4.2</span>
+              <span>{{rating.rating__avg}}</span>
               <i class="far fa-clock text-secondary"></i>
               <span> 15 min</span>
               <i class="fas fa-map-marker-alt text-secondary"></i>
