--- a/myproject/templates/app/base.html
+++ b/myproject/templates/app/base.html
@@ -11,6 +11,7 @@
     <link href="{% static 'css/profile.css' %}" rel="stylesheet">
     <link href="{% static 'css/style.css' %}" rel="stylesheet" type="text/css">
     <link href="{% static 'css/select.css' %}" rel="stylesheet" type="text/css">
+    <link href="{% static 'css/rating.css' %}" rel="stylesheet" type="text/css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
@@ -47,6 +48,7 @@
 </body>
 <script src="{% static 'js/main.js' %}"></script>
 <script src="{% static 'js/formValidation.js' %}"></script>
+<script src="{% static 'js/rating.js' %}"></script>
 
 <footer class="bg-light text-center text-lg-start mt-5">
     <!-- Copyright -->
