--- a/myproject/templates/app/index.html
+++ b/myproject/templates/app/index.html
@@ -11,13 +11,14 @@
 
 <div class="row row-cols-4 row-cols-md-6">
     {% for category in categorys %}
-    {% include 'app/categoryCard.html' with category=category%}
+    {% include 'app/categoryCard.html'%}
     {% endfor %}
 </div>
 {% include 'components/breadcrumb.html' %}
 <div class="row" id="Table-main">
-    {% for restaurant in restaurants %}
-    {% include 'app/card3Col.html' with restaurant=restaurant %}
+    {% for x in context %}
+    {{x.resta}}
+    {% include 'app/card3Col.html' %}
     {% endfor %}
 </div>
 {% endblock content %}
