--- a/myproject/templates/app/review.html
+++ b/myproject/templates/app/review.html
@@ -13,14 +13,39 @@
                         placeholder="Enter your review" aria-label="Enter your review" aria-describedby="basic-addon2">
                 </div>
                 <div class="input-group  d-flex justify-content-between mt-2">
-                    <div class="score mt-2">
-                        <i class="fas fa-star text-warning"></i>
-                        <i class="fas fa-star text-warning"></i>
-                        <i class="fas fa-star text-warning"></i>
-                        <i class="fas fa-star text-warning"></i>
-                        <i class="fas fa-star text-warning"></i>
+                    <div class="rating">
+                        <label>
+                            <input type="radio" name="rating" value="1" />
+                            <i class="icon fas fa-star "></i>
+                        </label>
+                        <label>
+                            <input type="radio" name="rating" value="2" />
+                            <i class="icon fas fa-star "></i>
+                            <i class="icon fas fa-star "></i>
+                        </label>
+                        <label>
+                            <input type="radio" name="rating" value="3" />
+                            <i class="icon fas fa-star "></i>
+                            <i class="icon fas fa-star "></i>
+                            <i class="icon fas fa-star "></i>
+                        </label>
+                        <label>
+                            <input type="radio" name="rating" value="4" />
+                            <i class="icon  fas fa-star "></i>
+                            <i class="icon fas fa-star "></i>
+                            <i class="icon fas fa-star "></i>
+                            <i class="icon fas fa-star "></i>
+                        </label>
+                        <label>
+                            <input type="radio" name="rating" value="5" />
+                            <i class="icon fas fa-star "></i>
+                            <i class="icon fas fa-star "></i>
+                            <i class="icon fas fa-star "></i>
+                            <i class="icon fas fa-star "></i>
+                            <i class="icon fas fa-star "></i>
+                        </label>
                     </div>
-                    <button type="submit" class="btn btn-info rounded col-md-2" style="color:white;">Submit</button>
+                    <button type="submit" class="btn btn-info rounded col-md-2 text-white">Submit</button>
                 </div>
             </form>
         </div>
