--- a/myproject/templates/restaurants/resCard.html
+++ b/myproject/templates/restaurants/resCard.html
@@ -4,8 +4,8 @@
 <div class="row justify-content-center mt-4">
   <div class="col-xl-8">
     <div class="card p-3" style="">
-      <img src="{{restaurant.getCoverPic}}" class="imgBg" alt="Responsive image" />
-      <img src="{{restaurant.getProfilePic}}" class="imgCollab" alt="Responsive image" />
+      <img src="{{restaurant.getCoverPic}}" class="imgBg img-cover" alt="Responsive image" />
+      <img src="{{restaurant.getProfilePic}}" class="imgCollab img-cover" alt="Responsive image" />
       <div class="row">
         <div class="col-6">
           <div class="card-body">
