--- a/myproject/static/css/style.css
+++ b/myproject/static/css/style.css
@@ -29,8 +29,11 @@
   max-height: 130px;
   max-width: 200px;
 }
-img {
+.img-cover {
   object-fit: cover;
+}
+.img-contain {
+  object-fit: contain;
 }
 
 input::-webkit-outer-spin-button,
