--- a/myproject/templates/app/index.html
+++ b/myproject/templates/app/index.html
@@ -16,8 +16,7 @@
 </div>
 {% include 'components/breadcrumb.html' %}
 <div class="row" id="Table-main">
-    {% for x in context %}
-    {{x.resta}}
+    {% for restaurant in restaurants %}
     {% include 'app/card3Col.html' %}
     {% endfor %}
 </div>
