--- a/myproject/templates/restaurants/indexResCard.html
+++ b/myproject/templates/restaurants/indexResCard.html
@@ -5,7 +5,7 @@
     <div class="card p-3 mb-2 ">
         <div class="d-flex justify-content-between">
             <a href="{% url 'resCard' restaurant.resID %}">
-                <img src="{{restaurant.getProfilePic}}" class="card-img resImg mx-auto d-block " style="height: 200px;">
+                <img src="{{restaurant.getProfilePic}}" class="card-img img-cover resImg mx-auto d-block " style="height: 200px;">
             </a>
         </div>
         <div class="mt-2">
