--- a/myproject/templates/restaurants/menu.html
+++ b/myproject/templates/restaurants/menu.html
@@ -5,7 +5,7 @@
   {% for menu in menus %}
   <div class="col-3">
     <div class="card h-100">
-      <img src="{{menu.picture.url}}" class="card-img-top" style="height:50%;">
+      <img src="{{menu.getProfilePic}}" class="card-img-top" style="height:50%;">
       <div class="card-body d-flex flex-column">
         <h5 class="card-title">{{menu.menuName}}</h5>
         <p class="card-text">
