--- a/myproject/templates/restaurants/categoryCard.html
+++ b/myproject/templates/restaurants/categoryCard.html
@@ -2,7 +2,8 @@
 {% block content %}
 <div class="col">
     <div id="{{category.fullCate}}" class="card p-2 border-0 text-white category-title">
-        <img src="{% static 'images/foodEx.jpg' %}" class="card-img catImg img-cover " style="filter: contrast(40%);">
+        <img src="{% static 'images/categoryCard.jpg' %}" class="card-img catImg img-cover "
+            style="filter: contrast(40%);">
         <div class="card-img-overlay ">
             <div class="d-flex align-items-center justify-content-center h-100">
 
