--- a/myproject/templates/restaurants/menu.html
+++ b/myproject/templates/restaurants/menu.html
@@ -27,8 +27,9 @@
     </div>
   </div>
   {% endfor %}
-
-  {% if user.role != "member" and user.role != "staff" %}
+<p>{{request.user.resID}}</p>
+<p>{{restaurant.resID }}</p>
+  {% if user.role != "member" and user.role != "staff" and request.user.resID_id == restaurant.resID %}
   <div class="row g-4 d-flex justify-content-end">
     <div class="row" style="width : 20%;">
       <button type="button" class="btn btn-warning btn-lg" data-bs-toggle="modal" data-bs-target="#menuModal">
