--- a/myproject/templates/users/profile.html
+++ b/myproject/templates/users/profile.html
@@ -143,17 +143,17 @@
 {% include 'restaurants/editCompModal.html' %}
 {% elif restaurant is not None %}
 <div class="row border border-3 mt-5 pt-3">
-    <div class="row-md-4">
-        <div class="col-4 mt-4">
+    <div class="col-4 mt-4">
+        <div class="row-md-4">
             <div class="card border-0">
                 <img src="{{restaurant.getProfilePic}}" class="img-contain" style="height:300px;">
             </div>
         </div>
-        <div class="row-md-4" style="margin-top:60px">
+        {% comment %} <div class="row-md-4" style="margin-top:60px">
             <div class="card border-0">
                 <img src="{{restaurant.getCoverPic}}" class="img-contain" style="height:300px;">
             </div>
-        </div>
+        </div> {% endcomment %}
     </div>
     <div class="col-8">
         <div class="row">
@@ -184,7 +184,7 @@
                             <label>Assosiated Company </label>
                         </div>
                         <div class="col-md-6">
-                            <a href="{% url 'managerProfile' restaurant.resID %}">
+                            <a href="{% url 'profile' restaurant.resID %}">
                                 <p>{{restaurant.companyID.companyName}}</p>
                             </a>
                         </div>
@@ -288,7 +288,7 @@
         </div>
     </div>
 </div>
-{% include 'app/modalEditRes.html' %}
+{% include 'restaurants/editResModal.html' %}
 {% elif profile is not None %}
 
 {% if profile.role == "executive" or profile.role == "manager"  or profile.role == "staff"%}
