--- a/myproject/templates/restaurants/indexResCard.html
+++ b/myproject/templates/restaurants/indexResCard.html
@@ -1,11 +1,11 @@
 {% load static %}
-{% block content %}
 
 <div class="col-md-4 All {{restaurant.categoryID.fullCate}}" id="card-filter">
     <div class="card p-3 mb-2 ">
         <div class="d-flex justify-content-between">
             <a href="{% url 'resCard' restaurant.resID %}">
-                <img src="{{restaurant.getProfilePic}}" class="card-img img-cover resImg mx-auto d-block " style="height: 200px;">
+                <img src="{{restaurant.getProfilePic}}" class="card-img img-cover resImg mx-auto d-block "
+                    style="height: 200px;">
             </a>
         </div>
         <div class="mt-2">
@@ -24,6 +24,3 @@
         </div>
     </div>
 </div>
-
-
-{% endblock content %}
