--- a/myproject/templates/restaurants/resCard.html
+++ b/myproject/templates/restaurants/resCard.html
@@ -56,6 +56,5 @@
 
 {% include 'restaurants/map.html' %}
 {% include 'queue/showReview.html'  %}
-{% include 'queue/review.html'  %}
-{% include 'restaurants/indexResCard.html' %}
+{% include 'queue/createReview.html'  %}
 {% endblock content %}
