--- a/myproject/templates/users/editProfileModal.html
+++ b/myproject/templates/users/editProfileModal.html
@@ -1,6 +1,6 @@
  {% load static %}
  <!-- Modal -->
- <div class="modal fade" id="editprofile" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+ <div class="modal fade" id="editProfile" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
      <div class="modal-dialog modal-lg">
          <div class="modal-content">
              <div class="modal-header border-0 align-self-start">
@@ -8,11 +8,22 @@
                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
              </div>
              <div class="modal-body">
-                 <h1>Edit Profile</h1>
+                 <h1 class="text-center">Edit Profile</h1>
                  <div class="card p-3 " style="">
-                     <form class="mt-3 ms-2">
-                         <div class="form-row d-flex pb-2">
-                             <div class="col-md-6" style="padding-right : 20px">
+                     <form class="mt-3 ms-2" method="POST" action="editProfile">
+                         <div class="row  mb-2">
+                             <img src="{{profile.getProfilePic}}" class="rounded mx-auto d-block img-contain"
+                                 style="height: 100px;" alt="">
+                         </div>
+                         <div class="row  mb-2">
+                             <label for="files" class="btn-sm btn-info rounded-lg rounded mx-auto d-block text-center"
+                                 style="width: 20%;">Change
+                                 Photo</label>
+                             <input name="id" hidden type="text" value="{{profile.memberID}}">
+                             <input id="files" style="visibility:hidden; height:0;" alt="submit" type="file">
+                         </div>
+                         <div class="row  mb-2">
+                             <div class="col-md-6">
                                  <label>Firstname</label>
                                  <input type="text" class="form-control" placeholder="{{profile.fName}}"
                                      value="{{profile.fName}}">
@@ -23,58 +34,48 @@
                                      placeholder="{{profile.lName}}" value="{{profile.lName}}">
                              </div>
                          </div>
-                         <div class="form-row d-flex pb-2">
-                             <div class="col-md-5" style="padding-right : 20px">
+                         <div class="row  mb-2">
+                             <div class="col-md-12">
                                  <label>Email</label>
                                  <input type="email" class="form-control" placeholder="{{profile.email}}"
                                      value="{{profile.email}}">
                              </div>
                          </div>
-                         <div class="form-row d-flex pb-2">
-                             <div class="col-md-5" style="padding-right : 20px">
+                         <div class="row  mb-2">
+                             <div class="col-md-6">
                                  <label>Password</label>
-                                 <input type="text" class="form-control" placeholder=""
-                                     value="">
+                                 <input type="text" class="form-control" placeholder="" value="">
                              </div>
-                             <div class="col-md-5">
+                             <div class="col-md-6">
                                  <label>Confirm password</label>
-                                 <input type="text" class="form-control" id=""
-                                     placeholder="" value="">
+                                 <input type="text" class="form-control" id="" placeholder="" value="">
                              </div>
                          </div>
-                         <div class="form-row d-flex pb-2">
-                             <div class="col-md-4" style="padding-right : 20px">
+                         <div class="row  mb-4">
+                             <div class="col-md-4">
                                  <label>Date of Birth</label>
-                                 <input type="date" class="form-control" placeholder="{{profile.dob}}"
+                                 <input type=" date" class="form-control" placeholder="{{profile.dob}}"
                                      value="{{profile.dob}}">
                              </div>
-                             <div class="col-md-3" style="padding-right : 20px">
+                             <div class="col-md-4">
                                  <label>Gender</label>
-                                 <select class="form-select" aria-label="Default select example" name="categoryID" >
-                                     <option selected hidden value="{{profile.gender}}" >
-
-                                         {% if  profile.gender == "M" %}
-                                         Male
-                                         {% elif profile.gender == "F" %}
-                                         Female
-                                         {% elif profile.gender == "O" %}
-                                         Other
-                                         {% endif %}
+                                 <select class="form-select" aria-label="Default select example" name="categoryID">
+                                     <option selected hidden value="{{profile.gender}}">
                                      </option>
-                                     <option value="M">Male</option>
-                                     <option value="F">Female</option>
-                                     <option value="O">Other</option>
+                                     <option value="male">male</option>
+                                     <option value="female">female</option>
+                                     <option value="other">other</option>
                                  </select>
                              </div>
-                             <div class="col-md-4" style="padding-right : 20px">
+                             <div class="col-md-4">
                                  <label>Tel</label>
-                                 <input type="text" class="form-control" id="inputPassword4"
+                                 <input type=" text" class="form-control" id="inputPassword4"
                                      placeholder="{{profile.tel}}" value="{{profile.tel}}">
                              </div>
                          </div>
-
-                         <div class="modal-footer">
-                             <input type="submit" value="Submit" class="btn btn-primary" >
+                         <div class="d-flex justify-content-end">
+                             <button type="reset" class="btn btn-warning me-4">Reset</button>
+                             <button type="submit" value="Submit" class="btn btn-primary">Save</button>
                          </div>
                      </form>
                  </div>
