--- a/myproject/templates/users/profile.html
+++ b/myproject/templates/users/profile.html
@@ -288,7 +288,7 @@
         </div>
     </div>
 </div>
-{% include 'app/modalEditRes.html' %}
+{% include 'restaurants/editResModal.html' %}
 {% elif profile is not None %}
 
 {% if profile.role == "executive" or profile.role == "manager"  or profile.role == "staff"%}
@@ -316,7 +316,7 @@
                 </div>
             </div>
             <div class="col-3 mt-4">
-                <input type="submit" class="profile-edit-btn" data-bs-toggle="modal" data-bs-target="#editprofile"
+                <input type="submit" class="profile-edit-btn" data-bs-toggle="modal" data-bs-target="#editProfile"
                     name="btnAddMore" value="Edit Profile" />
             </div>
         </div>
@@ -436,7 +436,7 @@
                 </div>
             </div>
             <div class="col-3 mt-4">
-                <input type="submit" class="profile-edit-btn" data-bs-toggle="modal" data-bs-target="#editprofile"
+                <input type="submit" class="profile-edit-btn" data-bs-toggle="modal" data-bs-target="#editProfile"
                     name="btnAddMore" value="Edit Profile" />
             </div>
         </div>
