--- a/myproject/templates/restaurants/managerHome.html
+++ b/myproject/templates/restaurants/managerHome.html
@@ -53,7 +53,7 @@
             <input class="form-control mt-4" id="queueSearch" type="text" placeholder="Search..">
             <br>
             <div class="mb-3" style="overflow-x: hidden; overflow-y : scroll; height : 600px">
-                {% include 'app/queue.html'%}
+                {% include 'queue/queue.html'%}
             </div>
         </div>
     </div>
