--- a/myproject/templates/components/sidebar.html
+++ b/myproject/templates/components/sidebar.html
@@ -68,12 +68,13 @@
             <li><a class="dropdown-item" href="#">Sign out</a></li>
         </ul>
     </div> {% endcomment %}
+    
 </div>
 {% elif user.role ==  "executive" %}
 <div class="offcanvas offcanvas-start d-flex flex-column flex-shrink-0 p-3 text-white bg-dark" tabindex="-1"
     id="offcanvasWithBackdrop" aria-labelledby="offcanvasWithBackdropLabel">
     <div class="offcanvas-header text-white">
-        <a href="#" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-white text-decoration-none">
+        <a href="{% url 'profile' request.user.companyID %}" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-white text-decoration-none">
             <img src="{{ request.user.companyID.getProfilePic }}" class="img border border-white rounded-3"
                 style="height: 60px; width: 60px;">
             <span class="fs-4 ms-3 text-white">{{request.user.companyID.companyName}}</span>
